<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_add_note"
    tools:context="com.example.kuba.itemist.AddNoteActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    >

    <Button
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/finsh_button"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_layout"
        app:layout_constraintTop_toBottomOf="@id/listView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/button_accept_subpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/editText_subpoint_of_the_list"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_top"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_subpoint_of_the_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="8"
        android:hint="@string/enter_content_of_subpoint"
        android:maxLength="50"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_accept_subpoint"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_top" />

    <include
        android:id="@+id/toolbar_top"
        layout="@layout/toolbar_top" />


    <com.example.kuba.itemist.DynamicListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_finish"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_accept_subpoint"
        android:fadeScrollbars="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:id="@+id/bottom_navigation_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_finish"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <include
            android:id="@+id/bottom_navigation"
            layout="@layout/bottom_navigation"
            />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
